# Kruor

./: CMakeLists.txt  readme.md
client/: clientDriver.c  clientDriver.h  clientTools.c  clientTools.h  main.c
report/: report.aux  report.fdb_latexmk  report.fls  report.tex
report/figures/: tables.xlsx
server/: main.c  serverDriver.c  serverDriver.h  serverTools.c  serverTools.h
